# creatur-uivector-wains

./: .gitignore  ChangeLog.md  LICENSE  README.md  creatur-uivector-wains.cabal  package.yaml  stack.yaml
src/ALife/Creatur/Wain/UIVector/: ExamineAgent.hs  Object.hs  Pattern.hs  PatternDB.hs  Tweaker.hs  Util.hs  Wain.hs
test/: Main.hs  Spec.hs
test/ALife/Creatur/Wain/UIVector/: PatternQC.hs
