name:                creatur-uivector-wains
version:             1.0.3
synopsis:            Simple vector library for use with creatur-wains.
description:         Simple vector library for use with creatur-wains.
                     Vectors can be genetically encoded and decoded,
                     making them suitable to represent the appearance
                     of a wain.
homepage:            https://github.com/mhwombat/creatur-uivector-wains
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) Amy de Buitléir 2012-2015
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     ALife.Creatur.Wain.UIVector.ExamineAgent,
                       ALife.Creatur.Wain.UIVector.Pattern,
                       ALife.Creatur.Wain.UIVector.PatternDB,
                       ALife.Creatur.Wain.UIVector.Tweaker,
                       ALife.Creatur.Wain.UIVector.Wain,
                       ALife.Creatur.Wain.UIVector.Util,
                       ALife.Creatur.Wain.UIVector.Object
  ghc-options:         -Wall -fno-warn-orphans
  other-modules:       Paths_creatur_uivector_wains
  build-depends:       base >=4.8 && <4.9,
                       base64-bytestring ==1.0.*,
                       bytestring ==0.10.*,
                       cereal ==0.5.*,
                       containers ==0.5.*,
                       creatur ==5.9.*,
                       creatur-wains ==8.2.*,
                       directory ==1.2.*,
                       filepath ==1.4.*,
                       lens ==4.13.*,
                       MonadRandom ==0.4.*,
                       mtl ==2.2.*,
                       random ==1.1.*,
                       som ==9.0.*,
                       split ==0.2.*,
                       transformers ==0.5.*,
                       unix == 2.7.*,
                       utf8-string ==1.*,
                       vector ==0.11.*
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-suite wain-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-orphans
  hs-source-dirs:      test, src
  build-depends:       base >=4.8 && <4.9,
                       base64-bytestring ==1.0.*,
                       bytestring ==0.10.*,
                       cereal ==0.5.*,
                       creatur ==5.9.*,
                       creatur-wains ==8.2.*,
                       creatur-wains-test-utils ==1.0.*,
                       creatur-uivector-wains,
                       MonadRandom ==0.4.*,
                       QuickCheck ==2.8.*,
                       som ==9.0.*,
                       split ==0.2.*,
                       test-framework ==0.8.*,
                       test-framework-hunit ==0.3.*,
                       test-framework-quickcheck2 ==0.3.*,
                       utf8-string ==1.*,
                       vector ==0.11.*
