name:                creatur-uivector-wains
version:             1.2.6
synopsis:            Simple vector library for use with creatur-wains.
description:         Simple vector library for use with creatur-wains.
                     Vectors can be genetically encoded and decoded,
                     making them suitable to represent the appearance
                     of a wain.
homepage:            https://github.com/mhwombat/creatur-uivector-wains#readme
bug-reports:         https://github.com/mhwombat/creatur-uivector-wains/issues
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) 2012-2017 Amy de Buitléir
category:            AI
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ALife.Creatur.Wain.UIVector.Pattern,
                       ALife.Creatur.Wain.UIVector.PatternDB,
                       ALife.Creatur.Wain.UIVector.Tweaker,
                       ALife.Creatur.Wain.UIVector.Wain,
                       ALife.Creatur.Wain.UIVector.Util,
                       ALife.Creatur.Wain.UIVector.Object
  other-modules:       Paths_creatur_uivector_wains
  ghc-options:         -Wall
  build-depends:       base,
                       base64-bytestring,
                       bytestring,
                       cereal,
                       containers,
                       creatur,
                       creatur-wains == 9.1.*,
                       directory,
                       filepath,
                       lens,
                       MonadRandom,
                       mtl,
                       random,
                       som,
                       split,
                       transformers,
                       unix,
                       utf8-string,
                       vector
  default-language:    Haskell2010

test-suite wain-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-orphans
  hs-source-dirs:      test, src
  build-depends:       base,
                       base64-bytestring,
                       bytestring,
                       cereal,
                       creatur,
                       creatur-wains,
                       creatur-wains-test-utils,
                       creatur-uivector-wains,
                       MonadRandom,
                       QuickCheck,
                       som,
                       split,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2,
                       utf8-string,
                       vector
  other-modules:       ALife.Creatur.Wain.UIVector.Pattern
                       ALife.Creatur.Wain.UIVector.PatternQC
